bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:2: error: not found: value four
  if (hour>20 || four<7){
                 ^