bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (hour>20 || four<7){
    if (talking){
      return true
    }
    return false
  }
  return false
  }